Sun Mar  8 19:51:20 1998  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (INCLUDES): Added GNOME_INCLUDEDIR.

Sat Mar  7 22:26:22 1998  Tom Tromey  <tromey@cygnus.com>

	* gnomine.c (parse_an_arg): New function.
	(parse_args): Removed.
	(options): New structure.
	(parser): Likewise.

2018-03-02  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnomine.c (main): Now the minefield is created with the correct
	visual and colormap.

	* minefield.c (_setup_sign): Now the image is only used here.

	* minefield.h: Removed image field from sign structure.

1998-02-28 Arturo Espinosa  <arturo@nuclecu.unam.mx>

	* gnomine.c: Using a spinbutton for the properties dialog.

1998-02-26 Arturo Espinosa  <arturo@nuclecu.unam.mx>

	* minefield.[ch]: The bitmaps for the flags and the mines are now 
	                  scaled.

1998-02-26 Arturo Espinosa  <arturo@nuclecu.unam.mx>

	* gnomine.c (main): Removed unused variable mfieldbox.
	* minefield.c: Changed the type of the secs variable to time_t, as
	               it was not being 64-bit clean. It was overwriting the minefield_signals[0]
	               and that's why there were warnings from Gtk.

1998-02-26 Arturo Espinosa  <arturo@nuclecu.unam.mx>

	* minefield.c: Moved signals enum to this file.
	* minefield.h: Added sign structure to unclutter the GtkMineField
	               struct.
	* minefield.c (gtk_mine_draw): Mines and flags are now centered.
        * minefield.c (gtk_mine_draw): Added flag mask declaration.
	* flag.xpm mine.xpm: Pixmaps are sharper now.
	* face*.xpm: Fixed faces transparencies.

1998-02-26 Arturo Espinosa  <arturo@nuclecu.unam.mx>

        * minefield.c (gtk_minefield_set_mines): font position is forced
	              by setting numstr[0].gc to zero.
	
1998-02-26 Arturo Espinosa  <arturo@nuclecu.unam.mx>

        * minefield.c (gtk_minefield_expose): Now the size of the font
	              is proportional to minesize.
	
1998-02-26 Arturo Espinosa  <arturo@nuclecu.unam.mx>
